# swig_conan_test

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  conanfile.py  pyproject.toml  setup.py
.github/workflows/: main.yml
include/: swig_conan_test.h
python/: README.md  pyproject.toml
src/mylib/: CMakeLists.txt  swig_conan_test.cpp
src/python/: CMakeLists.txt
src/swig_conan_test/: CMakeLists.txt  swig_conan_test.i
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
