[build-system]
requires = ["setuptools>=61.0", "wheel", "twine", "conan"]
build-backend = "setuptools.build_meta"

[project]
name = "swig_conan_test"
version = "0.0.3"
authors = [
  { name="Esteban DUGUEPEROUX", email="esteban.dugueperoux@gmail.com" },
]
description = "A small python package with a C++ extension built with conan"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EstebanDugueperoux2/swig_conan_test/"
"Bug Tracker" = "https://github.com/EstebanDugueperoux2/swig_conan_test//issues"